--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,5 +10,6 @@ singularity-image:
      - /bin/bash ./build_base.sh --nofakeroot
      - source /sregistry_file
      - echo $SREGISTRY_FILE > ~/.sregistry
+     - echo $SREGISTRY_FILE
      - /bin/bash ./push_image.sh --uri airl_lab/airl_env --tag CI --cli registry
        
