all variable as files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,5 @@ singularity-image:
   stage: build
   script:
      - /bin/bash ./build_base.sh --nofakeroot
-     - source /sregistry_file
-     - echo $SREGISTRY_TOKEN > ~/.singularity/sylabs-token
-     - /bin/bash ./push_image.sh --uri library://airl_lab/default/airl_env --tag baseci --cli registry
+     - /bin/bash ./push_image.sh --uri library://airl_lab/default/airl_env --tag base_ci --cli registry
        
