test avoiding pushing on non-master branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,6 @@ singularity-image:
   stage: build
   script:
      - echo $CI_COMMIT_REF_NAME
-     - #/bin/bash ./build_base.sh --nofakeroot
-     - #/bin/bash ./push_image.sh --uri library://airl_lab/default/airl_env --tag base_ci --cli registry
+     - exit 1 #/bin/bash ./build_base.sh --nofakeroot
+     - exit 1 #/bin/bash ./push_image.sh --uri library://airl_lab/default/airl_env --tag base_ci --cli registry
        
