add artifacts to save definition file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,5 +9,7 @@ singularity-image:
      - /bin/bash ./.gitlabci/build_base.sh --nofakeroot
      - /bin/bash ./.gitlabci/test_images.sh --nofakeroot
      - if [ $CI_COMMIT_REF_NAME = "master" ]; then /bin/bash ./.gitlabci/push_image.sh --uri library://airl_lab/default/airl_env --tag base_ci --cli registry; else echo "NOT on master branch, not pushing"; fi; 
-
+  artifacts:
+    paths:
+    - airl_env_base.def
        
