--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ stages:
 singularity-image:
   stage: build
   script:
-     - /bin/bash ./.gitlabci/build_base.sh airl_env_base --nofakeroot 
-     - /bin/bash ./.gitlabci/test_images.sh airl_env_base.sif --nofakeroot 
+     - /bin/bash ./.gitlabci/build_image.sh airl_env_base --nofakeroot 
+     - /bin/bash ./.gitlabci/test_image.sh airl_env_base.sif --nofakeroot 
      - if [ $CI_COMMIT_REF_NAME = "master" ]; then /bin/bash ./.gitlabci/push_image.sh airl_env_base --uri library://airl_lab/default/airl_env --tag base_ci --cli registry ; else echo "NOT on master branch, not pushing"; fi; 
   artifacts:
     paths:
