refatoring of the scripts for simpler ci script, and remove some warnings from bazel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,7 @@ stages:
 airl_env_base:
   stage: build
   script:
-     - /bin/bash ./.gitlabci/build_image.sh airl_env_base --nofakeroot 
-     - /bin/bash ./.gitlabci/test_image.sh airl_env_base.sif --nofakeroot 
-     - if [ $CI_COMMIT_REF_NAME = "master" ]; then /bin/bash ./.gitlabci/push_image.sh airl_env_base.sif --uri library://airl_lab/default/airl_env --tag base_ci --cli registry ; else echo "NOT on master branch, not pushing"; fi; 
+     - /bin/bash ./.gitlabci/ci_script.sh airl_env_base --tag base_ci
   artifacts:
     paths:
        - airl_env_base.def
@@ -17,9 +15,7 @@ airl_env_base:
 airl_env_tensorflow:
   stage: build
   script:
-     - /bin/bash ./.gitlabci/build_image.sh airl_env_tensorflow --nofakeroot 
-     - /bin/bash ./.gitlabci/test_image.sh airl_env_tensorlow.sif --nofakeroot 
-     - if [ $CI_COMMIT_REF_NAME = "master" ]; then /bin/bash ./.gitlabci/push_image.sh airl_env_tensorflow.sif --uri library://airl_lab/default/airl_env --tag tensorflow_ci --cli registry ; else echo "NOT on master branch, not pushing"; fi; 
+     - /bin/bash ./.gitlabci/ci_script.sh airl_env_tensorflow --tag tensorflow_ci
   artifacts:
     paths:
        - airl_env_tensorflow.def
