update ci script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 airl_env_base:
   stage: build
   script:
-     - /bin/bash ./.gitlabci/ci_script.sh airl_env_base --tag base_ci
+     - /bin/bash ./.gitlabci/ci_script.sh --basename airl_env_base --tag base_ci
   artifacts:
     paths:
        - airl_env_base.def
@@ -15,7 +15,7 @@ airl_env_base:
 airl_env_tensorflow:
   stage: build
   script:
-     - /bin/bash ./.gitlabci/ci_script.sh airl_env_tensorflow --tag tensorflow_ci
+     - /bin/bash ./.gitlabci/ci_script.sh --basename airl_env_tensorflow --tag tensorflow_ci
   artifacts:
     paths:
        - airl_env_tensorflow.def
