--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,13 @@ airl_env_tensorflow:
     paths:
        - airl_env_tensorflow.def
 
+airl_env_pytorch:
+  stage: build
+  script:
+     - /bin/bash ./.gitlabci/ci_script.sh --basename airl_env_pytorch --tag pytorch_ci
+  artifacts:
+    paths:
+       - airl_env_pytorch.def
 
 launch_experiment:
   stage: deploy
