managed to make visu_server compatible with readonly containers

--- a/resources/visu_server/etc/turbovncserver.conf
+++ b/resources/visu_server/etc/turbovncserver.conf
@@ -48,7 +48,7 @@
 # $depth = 24;
 # $desktopName = "TurboVNC ($ENV{USER})";
 # $vncClasses = "/opt/TurboVNC/java";
- $vncUserDir = "/opt/.vnc";
+# $vncUserDir = "/opt/.vnc";
 # $fontPath = "";
 $securityTypes = none
 # $generateOTP = 0;
@@ -79,10 +79,10 @@ $serverArgs = "-nolisten tcp -noreset +extension GLX +extension RANDR +extension
 ## startup script will be stored in $ENV{HOME}/.turbovncstartup instead of in
 ## $vncUserDir/xstartup.turbovnc.
 #
-# $vncUserDir = "/tmp/$ENV{USER}-vnc";
+$vncUserDir = "/tmp/$ENV{USER}-vnc";
 
 ## These settings are the default.  Uncomment and edit to change.
 #
-# $passwdFile = "$vncUserDir/passwd";
-# $x509CertFile = "$vncUserDir/x509_cert.pem";
-# $x509KeyFile = "$vncUserDir/x509_private.pem";
+ $passwdFile = "/opt/.vnc/passwd";
+ $x509CertFile = "/opt/.vnc/x509_cert.pem";
+ $x509KeyFile = "/opt/.vnc/x509_private.pem";
