--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -15,7 +15,9 @@ jobs:
   airl_env_bare:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    container: aneoshun/airl_build_env:latest
+    container: 
+      image: aneoshun/airl_build_env:latest
+      options: --privileged
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
